--- a/css/styles.css
+++ b/css/styles.css
@@ -5,16 +5,74 @@
   --accent-text-color-second: #ffffff;
   --font-ral: "Raleway", sans-serif;
 }
+
 body {
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
   background-color: var(--accent-text-color-second);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+}
+
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
 /* --------------HEADER-------------------- */
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-link {
+  display: block;
+}
+
+.header-nav {
+  display: flex;
+}
+
+.header-list,
+.header-address,
+.features-list,
+.photo-list,
+.team-list,
+.projects-list,
+.footer-list,
+.filter-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.header-list,
+.header-address {
+  display: flex;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  gap: 50px;
+}
 
 .header-logo,
 .footer-logo {
+  /* display: block;
+  display: flex; */
   font-family: var(--font-ral);
   font-weight: 700;
   font-size: 26px;
@@ -23,6 +81,8 @@ body {
 }
 
 .header-logo {
+  padding: 24px 0;
+  margin-right: 93px;
   color: #000000;
 }
 
@@ -31,6 +91,7 @@ body {
 }
 
 .header-link {
+  /* padding: 32px 0; */
   color: var(--title-text-color);
 }
 
@@ -45,17 +106,6 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-}
-
-.header-list,
-.header-address,
-.features-list,
-.photo-list,
-.team-list,
-.projects-list,
-.footer-list,
-.filter-list {
-  list-style: none;
 }
 
 .header-link,
@@ -93,10 +143,16 @@ body {
 /* --------------HERO-------------------- */
 
 .hero {
+  padding: 200px 452px;
   background-color: #2f303a;
+  justify-content: center;
 }
 
 .hero-title {
+  margin: 0 auto;
+  margin-bottom: 30px;
+  width: 696px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -107,6 +163,11 @@ body {
 }
 
 .hero-btn {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 10px 32px;
+
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -126,6 +187,24 @@ body {
 }
 
 /* --------------FEATURES-------------------- */
+.features,
+.team {
+  padding: 94px 215px;
+}
+
+.features-list,
+.photo-list,
+.projects-list,
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin: 0 auto;
+}
+
+.features-item {
+  flex-basis: calc((100% - 90px) / 4);
+}
 
 .feature-title,
 .filter-title,
@@ -143,6 +222,8 @@ body {
 }
 
 .features-subtitle {
+  margin-bottom: 10px;
+
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -157,14 +238,22 @@ body {
 }
 
 /* --------------GALLERY-------------------- */
+.photo {
+  padding: 0 215px 94px 215px;
+}
 
 .photo-title,
 .team-title {
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+}
+
+.photo-item {
+  flex-basis: calc((100%-60px) / 3);
 }
 
 /* --------------TEAM-------------------- */
@@ -173,11 +262,28 @@ body {
   background: #f5f4fa;
 }
 
+.team-item {
+  flex-basis: calc((100% - 90px) / 4);
+}
+
+.team-subtitle {
+  margin-bottom: 10px;
+}
+
 .team-subtitle,
 .team-text {
   line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
+}
+
+.team-wrap {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: var(--accent-text-color-second);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-subtitle {
@@ -189,10 +295,17 @@ body {
 /* --------------FOOTER-------------------- */
 
 .footer {
+  padding: 60px 0;
   background: #2f303a;
 }
 
+.footer-list {
+  display: block;
+}
+
 .footer-logo {
+  display: flex;
+  margin-bottom: 20px;
   color: var(--accent-text-color-second);
 }
 
@@ -206,6 +319,11 @@ body {
 
 .footer-place {
   color: var(--accent-text-color-second);
+  margin-bottom: 9px;
+}
+
+.footer-tel {
+  margin-bottom: 9px;
 }
 
 .footer-mail,
@@ -214,6 +332,23 @@ body {
 }
 
 /* --------------FILTER-------------------- */
+.filter {
+  border-top: 1px solid #ececec;
+}
+.filter-container {
+  margin-top: 94px;
+  margin-bottom: 34px;
+}
+
+.filter-list {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.filter-item {
+  padding: 6px 22px;
+}
 
 .filter-btn {
   font-family: inherit;
@@ -223,6 +358,9 @@ body {
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--title-text-color);
+
+  background: #f5f4fa;
+  border-radius: 4px;
   border: none;
   cursor: pointer;
 }
@@ -231,9 +369,29 @@ body {
 .filter-btn:focus {
   color: var(--accent-text-color-second);
   background-color: var(--accent-text-color-first);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* --------------PROJECTS-------------------- */
+
+.projects {
+  padding: 0 215px 94px;
+}
+
+.projects-item {
+  width: calc((100% - 60px) / 3);
+  border: 1px solid #eeeeee;
+}
+
+/* .project-link {
+border: 1px solid #EEEEEE;
+} */
+
+.projects-wrap {
+  padding: 20px 24px;
+  background-color: var(--accent-text-color-second);
+}
 
 .projects-subtitle {
   font-size: 18px;
