--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,9 @@ img {
 }
 
 /* --------------HEADER-------------------- */
+.header {
+  border-bottom: 1px solid #ececec;
+}
 
 .header-container {
   display: flex;
@@ -71,8 +74,6 @@ img {
 
 .header-logo,
 .footer-logo {
-  /* display: block;
-  display: flex; */
   font-family: var(--font-ral);
   font-weight: 700;
   font-size: 26px;
@@ -91,7 +92,6 @@ img {
 }
 
 .header-link {
-  /* padding: 32px 0; */
   color: var(--title-text-color);
 }
 
@@ -202,7 +202,8 @@ img {
   margin: 0 auto;
 }
 
-.features-item {
+.features-item,
+.team-item {
   flex-basis: calc((100% - 90px) / 4);
 }
 
@@ -253,7 +254,7 @@ img {
 }
 
 .photo-item {
-  flex-basis: calc((100%-60px) / 3);
+  flex-basis: calc((100% - 60px) / 3);
 }
 
 /* --------------TEAM-------------------- */
@@ -332,9 +333,7 @@ img {
 }
 
 /* --------------FILTER-------------------- */
-.filter {
-  border-top: 1px solid #ececec;
-}
+
 .filter-container {
   margin-top: 94px;
   margin-bottom: 34px;
@@ -346,11 +345,10 @@ img {
   gap: 8px;
 }
 
-.filter-item {
-  padding: 6px 22px;
-}
-
 .filter-btn {
+  margin: 0 auto;
+  padding: 6px 22px;
+
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -383,10 +381,6 @@ img {
   width: calc((100% - 60px) / 3);
   border: 1px solid #eeeeee;
 }
-
-/* .project-link {
-border: 1px solid #EEEEEE;
-} */
 
 .projects-wrap {
   padding: 20px 24px;
